fixtures/success/renewAccessToken.js
module.exports = {
    message: 'Token renewed successfully',
    token: 'gAAAAABfLkh1aYME', 
    date: '2024-11-18T00:00:00Z'
  };
  