fixtures/error/renewGuestToken_noRenewalNeeded.js
module.exports = {
    message: 'Guest token does not need renewal yet',
    token: 'gAAAAABfKsd9z3Ly', 
    date: '2024-11-18T00:00:00Z'
  };
  